# notion-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  custom_logging.py  dev.Dockerfile  docker-entrypoint.sh  done_date.py  inbox_adding.py  pyproject.toml  recurring_tasks.py  repeater.py  requirements.txt  run_smoke_test.py
.github/workflows/: inbox_adding.yml  main.yml
