[tool.poetry]
name = "notion_automation"
version = "0.1.0"
description = "My personal automations for notion.so"
authors = ["Fedor Ivanov <ivnfedor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notion-client = "^0.7.1"
python-dotenv = "^0.19.2"
isodate = "^0.6.0"
croniter = "^1.0.15"
coloredlogs = "^15.0.1"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
cached-property = "^1.5.2"
dictdiffer = "^0.9.0"
python-slugify = "^5.0.2"
tzlocal = "^4.1"
bs4 = "^0.0.1"
commonmark = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
